new vector calc

--- a/style.css
+++ b/style.css
@@ -107,6 +107,11 @@ body {
   background-image: url("./images/img3.jpg");
 }
 
+#card4{
+  background-image: url("./images/img4.jpg");
+}
+
+
 /* Menu Button */
 .menu-btn {
   display: none;
