--- a/style.css
+++ b/style.css
@@ -111,6 +111,9 @@ body {
   background-image: url("./images/img4.jpg");
 }
 
+#card5{
+  background-image: url("./images/img6.jpg");
+}
 
 /* Menu Button */
 .menu-btn {
