--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ body {
   background-image: url("./images/img6.jpg");
 }
 
+#card6{
+  background-image: url("./images/binary-tree.jpg");
+}
+
 /* Menu Button */
 .menu-btn {
   display: none;
